# Wb_sch_p2

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/api/routers/: users.py
app/api/services/: users.py
data/: valid_250_neg.csv  valid_250_pos.csv
notebooks/: data_markdown.ipynb  final.ipynb  finetune-e5_multy.ipynb  finetune-labse.ipynb  finetune_llama3.1_8b.ipynb
